ipv6-in-vnet-vmss/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "The name of the administrator of the new VM. Exclusion list: 'admin','administrator'"
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "The password for the administrator account of the new VM"
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      },
    "vmSku": {
      "type": "string",
      "defaultValue": "Standard_D1_v2",
      "metadata": {
        "description": "Size of VMs in the VM Scale Set."
      }
    },
    "vmssName": {
      "type": "string",
      "defaultValue": "MySet",
      "metadata": {
        "description": "String used as a base for naming resources (9 characters or less)."
      },
      "maxLength": 9
    },
    "instanceCount": {
      "type": "int",
      "metadata": {
        "description": "Number of VM instances (100 or less)."
      },
      "defaultValue": 2,
      "minValue": 1,
      "maxValue": 100
    }
  },
  "variables": {
    "vnetv4AddressRange": "10.0.0.0/16",
    "vnetv6AddressRange": "ace:cab:deca::/48",
    "subnetv4AddressRange": "10.0.0.0/24",
    "subnetv6AddressRange": "ace:cab:deca:deed::/64",  
    "virtualNetworkName": "[concat(parameters('vmssName'), 'vnet')]",
    "subnetName": "[concat(parameters('vmssName'), 'subnet')]",
    "natPoolName": "[concat(parameters('vmssName'), 'natpool')]",
    "bePoolName": "[concat(parameters('vmssName'), 'bepool')]",
    "bePoolv6Name": "[concat(parameters('vmssName'), 'bepoolv6')]",    
    "natStartPort": 50000,
    "natEndPort": 50120,
    "natBackendPort": 3389,
    "nicName": "[concat(parameters('vmssName'), 'nic')]",
    "ipConfigName": "[concat(parameters('vmssName'), 'ipconfig')]",
    "ipConfigNameV6": "[concat(parameters('vmssName'), 'ipconfig-v6')]",
    "imageReference": {
      "publisher": "MicrosoftWindowsServer",
      "offer": "WindowsServer",
      "sku": "2019-Datacenter",
      "version": "latest"
    }
  },
  "resources": [
    {
      "apiVersion": "2019-07-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "properties": {
        "dhcpOptions":{
            "dnsServers": ["cafe:43::","cafe:45::"]
        },
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetv4AddressRange')]",
            "[variables('vnetv6AddressRange')]"    
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefixes": [
                "[variables('subnetv4AddressRange')]",
                "[variables('subnetv6AddressRange')]"
              ]
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "PIPv4",
      "location": "[parameters('location')]",
      "apiVersion": "2019-07-01",
      "sku": {
	"name": "Standard"
      },      
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "PIPv6",
      "location": "[parameters('location')]",
      "apiVersion": "2019-07-01",
      "sku": {
	"name": "Standard"
      },            
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv6"
      }
    },    
    {
      "type": "Microsoft.Network/loadBalancers",
      "name": "loadBalancer",
      "location": "[parameters('location')]",
      "apiVersion": "2019-07-01",
      "sku": {
        "name": "Standard"
      },      
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses','PIPv4')]",
        "[resourceId('Microsoft.Network/publicIPAddresses','PIPv6')]"
      ],
      "properties": {
        "frontendIPConfigurations": [
          {
            "name": "LBFE",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'PIPv4')]"
              }
            }
          },
          {
            "name": "LBFE-v6",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'PIPv6')]"
              }
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "[variables('bePoolName')]"
          },
          {
            "name": "[variables('bePoolv6Name')]"
          }          
        ],
        "inboundNatPools": [
          {
            "name": "[variables('natPoolName')]",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIpConfigurations', 'loadBalancer', 'LBFE')]"
              },
              "protocol": "tcp",
              "frontendPortRangeStart": "[variables('natStartPort')]",
              "frontendPortRangeEnd": "[variables('natEndPort')]",
              "backendPort": "[variables('natBackendPort')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2019-02-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "VmssNsg",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow-HTTP-in",
            "properties": {
              "description": "Allow HTTP",
              "protocol": "TCP",
              "sourcePortRange": "80",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1001,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-all-out",
            "properties": {
              "description": "Allow out All",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1002,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow-RDP-in",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1003,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-MyIpv6App-out",
            "properties": {
              "description": "Allow My IPv6 App",
              "protocol": "Tcp",
              "sourcePortRange": "33819-33829",
              "destinationPortRange": "5000-6000",
              "sourceAddressPrefix": "ace:cab:deca:deed::/64",
              "destinationAddressPrefixes": [ "cab:cab:aaaa:bbbb::/64", "cab:cab:1111:2222::/64" ],
              "access": "Allow",
              "priority": 1004,
              "direction": "Outbound"
            }
          }
        ]
      }
    },    
    {
      "type": "Microsoft.Compute/virtualMachineScaleSets",
      "name": "[parameters('vmssName')]",
      "location": "[parameters('location')]",
      "apiVersion": "2019-07-01",
      "dependsOn": [
        "[concat('Microsoft.Network/loadBalancers/','loadBalancer')]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
      ],
      "sku": {
        "name": "[parameters('vmSku')]",
        "tier": "Standard",
        "capacity": "[parameters('instanceCount')]"
      },
      "properties": {
        "overprovision": "false",
        "upgradePolicy": {
          "mode": "Manual"
        },
        "virtualMachineProfile": {
          "storageProfile": {
            "osDisk": {
              "caching": "ReadOnly",
              "createOption": "FromImage"
            },
            "imageReference": "[variables('imageReference')]"
          },
          "osProfile": {
            "computerNamePrefix": "[parameters('vmssName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "networkProfile": {
            "networkInterfaceConfigurations": [
              {
                "name": "[variables('nicName')]",
                "properties": {
                  "primary": true,
		  "networkSecurityGroup": {
		    "id": "[resourceId('Microsoft.Network/networkSecurityGroups','VmssNsg')]"
		  },                  
                  "ipConfigurations": [
                    {
                      "name": "[variables('ipConfigName')]",
                      "properties": {
                        "primary": true,
                        "subnet": {
                          "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]"
                        },
                        "privateIPAddressVersion":"IPv4",                       
                        "publicipaddressconfiguration": {
                          "name": "pub1",
                          "properties": {
                            "idleTimeoutInMinutes": 15
                          }
                        },
                        "loadBalancerBackendAddressPools": [
                          {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', 'loadBalancer', variables('bePoolName'))]"
                          }
                        ],
                        "loadBalancerInboundNatPools": [
                          {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatPools', 'loadBalancer', variables('natPoolName'))]"
                          }
                        ]
                      }
                    },
                    {
                      "name": "[variables('ipConfigNameV6')]",
                      "properties": {
                        "subnet": {
                          "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]"
                        },
                        "privateIPAddressVersion":"IPv6",
                        "loadBalancerBackendAddressPools": [
                          {
                            "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', 'loadBalancer', variables('bePoolv6Name'))]"
                          }
                        ],                        
                      }
                    }
                  ]
                }
              }
            ]
          }
        }
      }
    }
  ]
}
